--- a/.prettierrc
+++ b/.prettierrc
@@ -1,21 +1,14 @@
 {
-    "plugins": ["prettier-plugin-tailwindcss"],
-    "arrowParens": "always",
-    "bracketSameLine": true,
-    "bracketSpacing": false,
-    "embeddedLanguageFormatting": "auto",
-    "htmlWhitespaceSensitivity": "strict",
-    "insertPragma": true,
-    "jsxSingleQuote": true,
-    "proseWrap": "preserve",
-    "quoteProps": "consistent",
-    "requirePragma": false,
-    "semi": true,
-    "singleAttributePerLine": false,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "useTabs": false,
-    "vueIndentScriptAndStyle": true,
-    "printWidth": 100
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "arrowParens": "always",
+  "bracketSameLine": true,
+  "bracketSpacing": true,
+  "jsxSingleQuote": true,
+  "useTabs": false,
+  "tabWidth": 2,
+  "printWidth": 120,
+  "semi": true,
+  "singleAttributePerLine": true,
+  "singleQuote": true,
+  "trailingComma": "all"
 }
