--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,7 @@
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-# Swap the comments on the following lines if you don't wish to use zero-installs
-# Documentation here: https://yarnpkg.com/features/zero-installs
-.yarn/cache
-.pnp.cjs
-.pnp.loader.mjs
-#.pnp.*
-
-# vscode
-.vscode/*
-
 # dependencies
 node_modules/
 package-lock.json
+pnpm-lock.yaml
 
 # outputs
 dist/*
@@ -30,3 +14,9 @@ dist-ssr
 .cache
 server/dist
 public/dist
+
+# misc
+.DS_Store
+
+# vscode
+.vscode/*
