--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "wind.jit",
-  "packageManager": "yarn@3.6.1",
   "version": "0.1.0",
   "main": "index.html",
   "license": "MIT",
@@ -10,12 +9,14 @@
     "codesandbox"
   ],
   "scripts": {
-    "start": "serve",
-    "dev": "serve"
+    "start": "live-server --port=6006 --entry-file=src/index.html",
+    "template": "live-server --port=6006 --entry-file=src/template.html",
+    "dev": "live-server --port=3000",
+    "pretty": "prettier --write \"src/**/*.html\""
   },
   "devDependencies": {
+    "live-server": "^1.2.2",
     "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.0",
-    "serve": "^14.2.0"
+    "prettier-plugin-tailwindcss": "^0.4.0"
   }
 }
