--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "codesandbox"
   ],
   "scripts": {
+    "serve": "serve -l 3000 -s src",
     "start": "live-server --port=6006 --entry-file=src/index.html",
     "template": "live-server --port=6006 --entry-file=src/template.html",
     "dev": "live-server --port=3000",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "live-server": "^1.2.2",
     "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.0"
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "serve": "^14.2.0"
   }
 }
