--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "codesandbox"
   ],
   "scripts": {
+    "dev": "serve -l 3000 -s src",
     "serve": "serve -l 3000 -s src",
     "start": "live-server --port=6006 --entry-file=src/index.html",
     "template": "live-server --port=6006 --entry-file=src/template.html",
-    "dev": "live-server --port=3000",
     "pretty": "prettier --write \"src/**/*.html\""
   },
   "devDependencies": {
     "live-server": "^1.2.2",
-    "prettier": "^3.0.0",
+    "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.0",
-    "serve": "^14.2.0"
+    "serve": "^14.2.1"
   }
 }
