--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,5 @@
   "window.zoomLevel": 0,
   "vsicons.dontShowNewVersionMessage": true,
   "workbench.iconTheme": "bearded-icons",
-  "workbench.colorTheme": "React Theme"
+  "workbench.colorTheme": "CodeSandbox Black 2021"
 }
