--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,11 +10,11 @@
   "editor.inlineSuggest.enabled": true,
 
   "git.ignoreLimitWarning": true,
-  "github.copilot.inlineSuggest.enable": true,
   "files.autoSave": "onWindowChange",
 
   "window.zoomLevel": 0,
   "vsicons.dontShowNewVersionMessage": true,
   "workbench.iconTheme": "bearded-icons",
-  "workbench.colorTheme": "CodeSandbox Black 2021"
+  "workbench.colorTheme": "CodeSandbox Black 2021",
+  "github.copilot.editor.enableAutoCompletions": true
 }
